--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Renueve Peru Web Agency</title>
     <script src="script.js"></script>
@@ -28,8 +33,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
-            <a class="navbar-brand" href="#">Renueve</a><a class="navbar-brand p" href="#">Perú</a><a
-                class="navbar-brand">Web Agency</a>
+            <a class="navbar-brand" href="#"><img src="diseño_3.png" alt="" srcset=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03"
                 aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -65,12 +69,13 @@
     <section id="banner">
         <div class="container">
             <div class="row">
-                <div class=" col-md-12 ">
+                <div class="col-md-12">
                     <p class="titulo-banner">
                         Especialistas en Desarrollo Web
                     </p>
                     <div class="padre">
-                        <button type="button" class="btn btn-outline-danger">SOLICITAR INFORMACIÓN</button>
+                        <button type="button" class="btn btn-outline-danger"> <a href="#contact-form">Solicitar
+                                Información</a> </button>
                     </div>
 
                     <video id="videoBG" poster="poster.JPG" autoplay muted loop>
@@ -88,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h1>Sobre Nosotros..</h1>
+                    <h1 class="article-h1">Sobre Nosotros..</h1>
                     <p class="article">
                         Somos Revenue Perú Web Agency, un equipo de jóvenes programadores, diseñadores gráficos,
                         publicistas, y especialistas en páginas web y gestión de redes sociales .
@@ -118,6 +123,7 @@
             <div class="row section2">
                 <div class="col-md-3">
                     <div class="container-servicios">
+                    <div class="img-servicios">   <img src="desarrollo web.png" alt="" srcset="" ></div>
                         <p class="servicios">Diseño web</p>
                         <p class="servicios-menu">Páginas Web Informativas</p>
                         <p class="servicios-menu">Landing Page</p>
@@ -126,6 +132,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="container-servicios">
+                        <div class="img-servicios">   <img src="ojopoto.png" alt="" srcset="" ></div>
                         <p class="servicios">Branding</p>
                         <p class="servicios-menu">Manual de Identidad</p>
                         <p class="servicios-menu">Paleta/Font</p>
@@ -136,6 +143,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="container-servicios">
+                        <div class="img-servicios">   <img src="redes-sociales.png" alt="" srcset="" ></div>
                         <p class="servicios">Gestion de Redes Sociales</p>
                         <p class="servicios-menu">Administración de Redes Sociales</p>
                         <p class="servicios-menu">Publicaciones</p>
@@ -145,10 +153,11 @@
                 </div>
                 <div class="col-md-3">
                     <div class="container-servicios">
-                    <p class="servicios">Marketing Digital</p>
-                    <p class="servicios-menu">Campañas de Publicidad</p>
+                        <div class="img-servicios">   <img src="marketing-digita.png" alt="" srcset="" ></div>
+                        <p class="servicios">Marketing Digital</p>
+                        <p class="servicios-menu">Campañas de Publicidad</p>
 
-                </div>  
+                    </div>
                 </div>
             </div>
         </div>
@@ -192,14 +201,14 @@
                 </div>
             </div>
             <div class="col-xs-12">
-                <button onclick='sendMail()' class="btn-lrg submit-btn">Send Message</button>
+                
+                <button type="button" onclick='sendMail()' class="btn btn-outline-danger2"> Solicitar
+                    Información </button>
             </div>
         </div>
     </section>
-        <script src="//code.tidio.co/yzoudxbewqianjj0q96ylrr4v9w7aeue.js" async></script>
- 
- 
-    
+    <script src="//code.tidio.co/yzoudxbewqianjj0q96ylrr4v9w7aeue.js" async></script>
+
 </body>
 
 </html>
